--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,18 +1,18 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI/CD Pipeline
+name: 🚀 Production CI/CD
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
   pull_request:
-    branches: [ main ]
-  # Allows you to run this workflow manually from the Actions tab
+    branches: [main]
   workflow_dispatch:
+
+env:
+  NODE_ENV: production
 
 # Set permissions for GitHub Pages deployment
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
@@ -22,42 +22,82 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  lint-and-test:
+  test:
+    name: 🧪 Test Suite
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Bun
-      uses: oven-sh/setup-bun@v1
-      with:
-        bun-version: latest
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
         
-    - name: Install dependencies
-      run: bun install
-      
-    - name: Run ESLint
-      run: bun run lint
-      
-    - name: Check Prettier formatting
-      run: bun run format:check
-      
-    - name: Run tests
-      run: bun test
-      continue-on-error: true
-      
-    - name: Build project
-      run: bun run build
-      
-    # Upload build artifacts for deployment job
-    - name: Upload Pages artifact
-      uses: actions/upload-pages-artifact@v3
-      with:
-        path: ./dist
+      - name: 🔧 Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
+          
+      - name: 📦 Install dependencies
+        run: bun install --frozen-lockfile
+        
+      - name: 🔍 Lint code
+        run: bun run lint
+        
+      - name: 💄 Check formatting
+        run: bun run format:check
+        
+      - name: 🏗️ Type check
+        run: bun run type-check
+        
+      - name: 🧪 Run unit tests
+        run: bun run test:coverage
+        
+      - name: 🏗️ Build project
+        run: bun run build
+        
+      - name: 📤 Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./dist
+
+  security:
+    name: 🔒 Security Audit
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+        
+      - name: 🔧 Setup Bun
+        uses: oven-sh/setup-bun@v1
+        
+      - name: 📦 Install dependencies
+        run: bun install --frozen-lockfile
+        
+      - name: 🔍 Security audit
+        run: bun audit
+
+  performance:
+    name: ⚡ Performance Tests
+    runs-on: ubuntu-latest
+    needs: test
+    
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+        
+      - name: 🔧 Setup Bun
+        uses: oven-sh/setup-bun@v1
+        
+      - name: 📦 Install dependencies
+        run: bun install --frozen-lockfile
+        
+      - name: 🏗️ Build application
+        run: bun run build
+        
+      - name: 📊 Analyze bundle
+        run: bun run analyze
 
   deploy:
-    needs: lint-and-test
+    needs: [test, security, performance]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     
