move to typescript

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,41 +18,41 @@ permissions:
 
 # Allow only one concurrent deployment
 concurrency:
-  group: "pages"
+  group: 'pages'
   cancel-in-progress: false
 
 jobs:
   test:
     name: 🧪 Test Suite
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: 🔧 Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
-          
+
       - name: 📦 Install dependencies
         run: bun install --frozen-lockfile
-        
+
       - name: 🔍 Lint code
         run: bun run lint
-        
+
       - name: 💄 Check formatting
         run: bun run format:check
-        
+
       - name: 🏗️ Type check
         run: bun run type-check
-        
+
       - name: 🧪 Run unit tests
         run: bun run test:coverage
-        
+
       - name: 🏗️ Build project
         run: bun run build
-        
+
       - name: 📤 Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -61,17 +61,17 @@ jobs:
   security:
     name: 🔒 Security Audit
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: 🔧 Setup Bun
         uses: oven-sh/setup-bun@v1
-        
+
       - name: 📦 Install dependencies
         run: bun install --frozen-lockfile
-        
+
       - name: 🔍 Security audit
         run: bun audit
 
@@ -79,20 +79,20 @@ jobs:
     name: ⚡ Performance Tests
     runs-on: ubuntu-latest
     needs: test
-    
+
     steps:
       - name: 📥 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: 🔧 Setup Bun
         uses: oven-sh/setup-bun@v1
-        
+
       - name: 📦 Install dependencies
         run: bun install --frozen-lockfile
-        
+
       - name: 🏗️ Build application
         run: bun run build
-        
+
       - name: 📊 Analyze bundle
         run: bun run analyze
 
@@ -100,12 +100,12 @@ jobs:
     needs: [test, security, performance]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    
+
     steps:
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
