--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,8 +22,9 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  test:
-    name: 🧪 Test Suite
+  # Quality checks and build
+  build:
+    name: 🏗️ Build & Quality Checks
     runs-on: ubuntu-latest
 
     steps:
@@ -58,6 +59,13 @@ jobs:
         with:
           path: ./dist
 
+      - name: 📤 Upload build artifact for performance tests
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-files
+          path: ./dist
+
+  # Security audit (can run in parallel)
   security:
     name: 🔒 Security Audit
     runs-on: ubuntu-latest
@@ -75,10 +83,11 @@ jobs:
       - name: 🔍 Security audit
         run: bun audit
 
+  # Performance tests using build artifacts
   performance:
     name: ⚡ Performance Tests
     runs-on: ubuntu-latest
-    needs: test
+    needs: build
 
     steps:
       - name: 📥 Checkout code
@@ -90,14 +99,17 @@ jobs:
       - name: 📦 Install dependencies
         run: bun install --frozen-lockfile
 
-      - name: 🏗️ Build application
-        run: bun run build
+      - name: 📥 Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: build-files
+          path: ./dist
 
       - name: 📊 Analyze bundle
         run: bun run analyze
 
   deploy:
-    needs: [test, security, performance]
+    needs: [build, security, performance]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
 
